Version 1.1.2 release Check CHANGELOG for details